fix: User class has only private fields, add StringUtils dependency